finished readme, change model to put init val, changed api
