# company/models.py
@@ -15,7 +15,7 @@ class Employee(models.Model):
     position = models.CharField(max_length=100)
     salary = models.DecimalField(max_digits=10, decimal_places=2)
     age = models.IntegerField()
-    department = models.ForeignKey(Department, on_delete=models.CASCADE, related_name='employees')
+    department = models.ForeignKey(Department, on_delete=models.CASCADE, null=True, related_name='employees')
 
     def __str__(self):
         return self.full_name
